--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,81 @@
-importlib-metadata==4.13.0
+absl-py==2.2.2
+ale-py==0.7.4
+AutoROM==0.4.2
+AutoROM.accept-rom-license==0.6.1
+bidict==0.23.1
+cachetools==5.5.2
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpickle==3.1.1
+contourpy==1.1.1
+cycler==0.12.1
+Cython==0.29.37
+deepbots==1.0.0
+etils==1.3.0
+fasteners==0.19
+filelock==3.16.1
+fonttools==4.57.0
+fsspec==2025.3.0
+glfw==2.9.0
+google-auth==2.39.0
+google-auth-oauthlib==1.0.0
+grpcio==1.70.0
 gym==0.21.0
-stable-baselines3[extra]==1.7.0
-cython<3
-mujoco-py<2.2,>=2.1
+h11==0.16.0
+idna==3.10
+imageio==2.35.1
+importlib-metadata==4.13.0
+importlib-resources==6.4.5
 Jinja2==3.1.2
-scipy
-patchelf
+kiwisolver==1.4.7
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+mdurl==0.1.2
+mpmath==1.3.0
+mujoco==3.2.3
+mujoco-py==2.1.2.14
+networkx==3.1
+numpy==1.24.4
+oauthlib==3.2.2
+opencv-python==4.11.0.86
+packaging==25.0
+pandas==2.0.3
+pillow==10.4.0
+protobuf==5.29.4
+psutil==7.0.0
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pycparser==2.22
+pygame==2.6.1
+Pygments==2.19.1
+PyOpenGL==3.1.9
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+python-engineio==4.12.1
+python-socketio==5.13.0
+pytz==2025.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==14.0.0
+rsa==4.9.1
+scipy==1.10.1
+simple-websocket==1.1.0
+six==1.17.0
+stable-baselines3==1.7.0
+sympy==1.13.3
+tensorboard==2.14.0
+tensorboard-data-server==0.7.2
+tensorboardX==2.6.2.2
+torch==2.4.1
+tqdm==4.67.1
+typing_extensions==4.13.2
+urllib3==2.2.3
+wandb==0.17.0
+Werkzeug==3.0.6
+wheel==0.38.4
+wsproto==1.2.0
+zipp==3.20.2
