--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ opencv-python==4.11.0.86
 packaging==25.0
 pandas==2.0.3
 pillow==10.4.0
-protobuf==5.29.4
+protobuf>=3.20,<5
 psutil==7.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
